<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<resources>
    <string name="Camera_Push">摄像头推流</string>
    <string name="Camera_Push_Info_Real_Time_Encode_Bitrate">实时编码码率</string>
    <string name="Camera_Push_Info_Real_Time_Trans_Bitrate">实时传输码率</string>
    <string name="Camera_Push_Info_Real_Time_Trans_FPS">实时传输帧率</string>
    <string name="Camera_Push_Info_Url">推流地址</string>
    <string name="Camera_Push_Info_Video_Capture_FPS">采集帧率</string>
    <string name="Camera_Push_Info_Video_Capture_IO_FPS">采集I/O帧率:</string>
    <string name="Camera_Push_Info_Video_Capture_Resolution">采集分辨率</string>
    <string name="Camera_Push_Info_Video_Encode_Codec">编码格式</string>
    <string name="Camera_Push_Info_Video_MaxBitrate">视频最大码率</string>
    <string name="Camera_Push_Info_Video_MinBitrate">视频最小码率</string>
    <string name="Camera_Push_Info_Video_Push_Resolution">推流分辨率</string>
    <string name="Camera_Push_Info_Video_StartBitrate">视频初始码率</string>
    <string name="Home_Advanced_Features">高级功能</string>
    <string name="Home_Anchor_And_Audience_Mic">主播与观众连麦</string>
    <string name="Home_Anchor_VS_Anchor_Pk">主播与主播PK</string>
    <string name="Home_Basic_Features">基础功能</string>
    <string name="Home_Camera_Push">摄像头推流</string>
    <string name="Home_Custom_Push_Stream">自定义采集推流</string>
    <string name="Home_H265_Hardcoded">H.265 硬编码</string>
    <string name="Home_Screen_Push">屏幕采集推流</string>
    <string name="Home_Interactive_Features">互动功能</string>
    <string name="Home_Live_Beauty_Filter">美颜滤镜</string>
    <string name="Home_Live_Pull_Streaming">直播拉流</string>
    <string name="Home_Picture_In_Picture">画中画</string>
    <string name="Home_Live_Push_With_Mixed_Stream">音视频混流</string>
    <string name="Home_Push_Streaming_Bitrate_Adaptive">推流码率自适应</string>
    <string name="Home_RTM_Push_Streaming">RTM 超低延迟推流</string>
    <string name="Home_RTM_Pull_Streaming">RTM 超低延迟拉流</string>
    <string name="Interact_Link">观众连麦</string>
    <string name="Interact_Link_Anchor">我是主播</string>
    <string name="Interact_Link_Anchor_Title">主播</string>
    <string name="Interact_Link_Audience">我是观众</string>
    <string name="Interact_Link_Audience_Title">观众</string>
    <string name="Interact_Link_Tip">请输入SDK和房间信息</string>
    <string name="Interact_PK">主播与主播PK</string>
    <string name="Interact_PK_Start">开始直播</string>
    <string name="Interact_PK_Tip">请输入SDK和房间信息\nOther Token 请使用当前用户 ID 和 Other Room Id 生成</string>
    <string name="Interact_Send_SEI">发送SEI</string>
    <string name="Interact_Start_Link">开始连麦</string>
    <string name="Interact_Start_PK">开始跨房PK</string>
    <string name="Interact_Stop_Link">结束连麦</string>
    <string name="Interact_Stop_PK">停止跨房PK</string>
    <string name="Pull_Fill_Mode">填充模式</string>
    <string name="Pull_Mute">静音</string>
    <string name="Pull_Stream">直播拉流</string>
    <string name="Pull_Stream_Fill_Mode_Alert_AspectFill">裁剪</string>
    <string name="Pull_Stream_Fill_Mode_Alert_AspectFit">黑边</string>
    <string name="Pull_Stream_Fill_Mode_Alert_FullFill">缩放</string>
    <string name="Pull_Stream_Fill_Mode_Alert_Title">填充模式</string>
    <string name="Pull_Stream_Info_Audio_BufferTime">音频缓存时长</string>
    <string name="Pull_Stream_Info_Delay_Time">端到端延时</string>
    <string name="Pull_Stream_Info_Is_HardWareDecode">是否硬件解码</string>
    <string name="Pull_Stream_Info_Is_Mute">是否静音</string>
    <string name="Pull_Stream_Info_Is_Playing">是否播放中</string>
    <string name="Pull_Stream_Info_Stall_Time">总卡顿时长</string>
    <string name="Pull_Stream_Info_Stream_Format">直播流格式</string>
    <string name="Pull_Stream_Info_Stream_Protocol">直播流协议</string>
    <string name="Pull_Stream_Info_Url">播放地址</string>
    <string name="Pull_Stream_Info_Video_Bitrate">视频码率</string>
    <string name="Pull_Stream_Info_Video_BufferTime">视频缓存时长</string>
    <string name="Pull_Stream_Info_Video_Codec">视频编码格式</string>
    <string name="Pull_Stream_Info_Video_FPS">视频帧率</string>
    <string name="Pull_Stream_Info_Video_Size">视频大小</string>
    <string name="Pull_Stream_Start_Play">开始播放</string>
    <string name="Pull_Stream_Stop_Play">停止播放</string>
    <string name="Pull_Stream_Url_Tip">流名</string>
    <string name="Pull_UnMute">取消静音</string>
    <string name="Push_Auto_Bitrate">码率自适应</string>
    <string name="Push_Beauty">推流+美颜</string>
    <string name="Push_Beauty_Compose">美颜、美型</string>
    <string name="Push_Beauty_Filter">滤镜</string>
    <string name="Push_Beauty_Sticker">贴纸</string>
    <string name="Push_Mix_Stream">音视频混流</string>
    <string name="Push_Mix_Stream_Audio">音频混流</string>
    <string name="Push_Mix_Stream_Video">视频混流</string>
    <string name="Push_Camera_Back">摄像头(后)</string>
    <string name="Push_Camera_Front">摄像头(前)</string>
    <string name="Push_Capture_Mirror">采集镜像</string>
    <string name="Push_Custom">自定义采集推流</string>
    <string name="Push_Info">信息</string>
    <string name="Push_Mute">静音</string>
    <string name="Push_Preview_Mirror">预览镜像</string>
    <string name="Push_Push_Mirror">推流镜像</string>
    <string name="Push_RTM">RTM 超低延迟推流</string>
    <string name="Push_Start_Push">开始推流</string>
    <string name="Push_Stop_Push">停止推流</string>
    <string name="Push_UnMute">取消静音</string>
    <string name="Push_Url_Tip">流名</string>
    <string name="Generate_Push_Url_Tip">正在生成推流地址…</string>
    <string name="Generate_Pull_Url_Tip">正在生成拉流地址…</string>
    <string name="Start_Picture_In_Picture">开启画中画</string>
    <string name="Stop_Picture_In_Picture">停止画中画</string>
    <string name="app_name">veLive快速入门</string>
    <string name="other_room_id">对方主播房间 ID</string>
    <string name="other_token">Other Token</string>
    <string name="pull_url">拉流地址</string>
    <string name="push_url">推流地址</string>
    <string name="room_id">房间 ID</string>
    <string name="rtm_url">RTM URL</string>
    <string name="rtmp_url">RTMP URL</string>
    <string name="token">Token</string>
    <string name="user_id">用户 ID</string>
    <string name="pip_authorization_failed">授权失败</string>
    <string name="pip_authorization_success">授权成功</string>
    <string name="pip_require_authorization">当前无权限，请授权</string>
    <string name="pip_running_in_background">后台运行中</string>
    <string name="pip_not_support">不支持画中画</string>
    <string name="config_stream_name_tip">请配置流名</string>
    <string name="preparing">准备中...</string>
    <string name="Screen_Capture_Interrupted_Error">屏幕采集被中断</string>
    <string name="Screen_Capture_Not_Support_Error">不支持屏幕采集</string>
    <string name="Screen_Capture_Start_Error">屏幕采集启动失败</string>
</resources>