<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackColor"
    tools:context=".features.interact.link.LinkAudienceActivity">

    <SurfaceView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextureView
        android:id="@+id/render_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/guest_linear_layout"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@color/clearColor"
        android:orientation="vertical"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/url_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/whiteColor"
            android:text="@string/push_url"/>
        <EditText
            android:id="@+id/url_input_view"
            android:background="@drawable/rounded_edittext"
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/whiteColor"
            android:layout_height="wrap_content"
            android:minHeight="35dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/push_info_text_view"
        app:layout_constraintTop_toBottomOf="@+id/url_input_layout"
        android:layout_width="match_parent"
        android:textColor="@color/whiteColor"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:id="@+id/bottom_control_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ToggleButton
                android:background="@drawable/state_button_bg_color"
                android:textColor="@drawable/state_button_text_color"
                android:onClick="playControl"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textOn="@string/Pull_Stream_Stop_Play"
                android:textOff="@string/Pull_Stream_Start_Play"/>
            <ToggleButton
                android:background="@drawable/state_button_bg_color"
                android:textColor="@drawable/state_button_text_color"
                android:onClick="interactControl"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textOn="@string/Interact_Stop_Link"
                android:textOff="@string/Interact_Start_Link"/>
            <Button
                android:background="@drawable/state_button_bg_color"
                android:textColor="@drawable/state_button_text_color"
                android:onClick="seiControl"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Interact_Send_SEI"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:background="@drawable/state_button_bg_color"
                android:textColor="@drawable/state_button_text_color"
                android:onClick="beautyControl"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Push_Beauty_Compose"/>
            <Button
                android:background="@drawable/state_button_bg_color"
                android:textColor="@drawable/state_button_text_color"
                android:onClick="filterControl"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Push_Beauty_Filter"/>
            <Button
                android:background="@drawable/state_button_bg_color"
                android:textColor="@drawable/state_button_text_color"
                android:onClick="stickerControl"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Push_Beauty_Sticker"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>