<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackColor"
    tools:context=".features.interact.pk.PKAnchorActivity">
    <TextureView
        android:id="@+id/render_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/pk_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="260dp">
        <TextureView
            android:id="@+id/render_local_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextureView
            android:id="@+id/render_other_view"
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/url_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/whiteColor"
            android:text="@string/push_url"/>
        <EditText
            android:id="@+id/url_input_view"
            android:background="@drawable/rounded_edittext"
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/whiteColor"
            android:layout_height="wrap_content"
            android:minHeight="35dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/push_info_text_view"
        app:layout_constraintTop_toBottomOf="@+id/url_input_layout"
        android:layout_width="match_parent"
        android:textColor="@color/whiteColor"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:id="@+id/bottom_control_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ToggleButton
                android:background="@drawable/state_button_bg_color"
                android:textColor="@drawable/state_button_text_color"
                android:onClick="pushControl"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textOn="@string/Push_Stop_Push"
                android:textOff="@string/Push_Start_Push"/>
            <ToggleButton
                android:background="@drawable/state_button_bg_color"
                android:textColor="@drawable/state_button_text_color"
                android:onClick="pkControl"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textOn="@string/Interact_Stop_PK"
                android:textOff="@string/Interact_Start_PK"/>
            <Button
                android:background="@drawable/state_button_bg_color"
                android:textColor="@drawable/state_button_text_color"
                android:onClick="seiControl"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Interact_Send_SEI"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:background="@drawable/state_button_bg_color"
                android:textColor="@drawable/state_button_text_color"
                android:onClick="beautyControl"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Push_Beauty_Compose"/>
            <Button
                android:background="@drawable/state_button_bg_color"
                android:textColor="@drawable/state_button_text_color"
                android:onClick="filterControl"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Push_Beauty_Filter"/>
            <Button
                android:background="@drawable/state_button_bg_color"
                android:textColor="@drawable/state_button_text_color"
                android:onClick="stickerControl"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Push_Beauty_Sticker"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>