<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".features.interact.link.LinkActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:textColor="@color/textBlackColor"
    android:text="@string/Interact_Link_Tip"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/textBlackColor"
            android:text="@string/room_id"/>
        <EditText
            android:id="@+id/room_id_text_view"
            android:background="@drawable/rounded_edittext"
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/textBlackColor"
            android:layout_height="wrap_content"
            android:minHeight="35dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/textBlackColor"
            android:text="@string/user_id"/>
        <EditText
            android:id="@+id/user_id_text_view"
            android:background="@drawable/rounded_edittext"
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/textBlackColor"
            android:layout_height="wrap_content"
            android:minHeight="35dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/camera_control"
            android:background="@drawable/home_item_shadow_bg"
            android:textColor="@drawable/state_button_text_color"
            android:onClick="anchorControl"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Interact_Link_Anchor"/>
        <Button
            android:id="@+id/mute_control"
            android:background="@drawable/home_item_shadow_bg"
            android:textColor="@drawable/state_button_text_color"
            android:onClick="audienceControl"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Interact_Link_Audience"/>
    </LinearLayout>
</LinearLayout>
</android.support.constraint.ConstraintLayout>