<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.advanced.PushCustomActivity">
    <SurfaceView
        android:id="@+id/render_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/url_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/whiteColor"
            android:text="@string/Push_Url_Tip"/>
        <EditText
            android:id="@+id/url_input_view"
            android:background="@drawable/rounded_edittext"
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/whiteColor"
            android:layout_height="wrap_content"
            android:minHeight="35dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/push_info_text_view"
        app:layout_constraintTop_toBottomOf="@+id/url_input_layout"
        android:layout_width="match_parent"
        android:textColor="@color/whiteColor"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ToggleButton
            android:id="@+id/push_control"
            android:background="@drawable/state_button_bg_color"
            android:textColor="@drawable/state_button_text_color"
            android:onClick="pushControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/Push_Stop_Push"
            android:textOff="@string/Push_Start_Push"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>